# opsi-utils

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  build_manpages.sh  create_source.sh  opsi-admin  opsi-backup  opsi-convert  opsi-dev-tool.yml  opsi-makepackage  opsi-makeproductfile  opsi-makeproductfilev2  opsi-migrate-product-updater-configuration  opsi-newprod  opsi-package-manager  opsi-package-manager-v2  opsi-package-updater  opsi-policy-result  opsi-product-updater  opsi-utils.code-workspace  opsi-winipatch  opsiinst  opsiinstv2  opsiuninst  pyinstaller-build.py  pyproject.toml  recreate_manpages.sh  run-opsiutils  sysbackup
data/: opsi-package-updater.conf  opsi-product-updater.conf
data/etc/logrotate.d/: opsi-package-log  opsi-package-manager  opsi-package-updater  opsi-product-updater
data/etc/opsi/package-updater.repos.d/: example.repo.template  experimental.repo  primary.repo  testing.repo  uib-linux.repo  uib-local_image.repo  uib-windows.repo
data/etc/opsi/product-updater.repos.d/: example.repo.template  master-depot.repo  uib-linux.repo  uib-local_image.repo  uib-windows.repo
debian/: changelog  conffiles  control  copyright  dirs  install  opsi-utils.manpages  opsi-utils.postinst  rules
debian/source/: lintian-overrides
doc/: opsi-admin.asciidoc  opsi-backup.asciidoc  opsi-convert.asciidoc  opsi-makepackage.asciidoc  opsi-makeproductfile.asciidoc  opsi-newprod.asciidoc  opsi-package-manager.asciidoc  opsi-package-updater.asciidoc  opsi-product-updater.asciidoc
gettext/: README.TXT  opsi-utils.pot  opsi-utils_da.po  opsi-utils_de.po  opsi-utils_es.po  opsi-utils_fr.po  opsi-utils_nl.po  opsi-utils_ru.po  opsi_newprod_de.po  opsi_newprod_fr.po  opsiutils.pot  opsiutils_de.po  opsiutils_fr.po  update_mo.sh  update_po.sh
import_hooks/: hook-pyasn1_modules.py
integration_tests/: opsi-admin-test.sh  opsi-makepackage-test.sh  opsi-package-manager-test.sh  opsi-package-updater-test.sh  opsi-setup-test.sh  opsi-wakeup-clients-test.sh
manpages/: opsi-admin.asciidoc  opsi-backup.asciidoc  opsi-convert.asciidoc  opsi-makepackage.asciidoc  opsi-makeproductfile.asciidoc  opsi-newprod.asciidoc  opsi-package-manager.asciidoc  opsi-package-updater.asciidoc
opsi-utils_data/etc/logrotate.d/: opsi-backup  opsi-package-manager
opsi-utils_data/etc/opsi/: opsi-package-updater.conf
opsi-utils_data/etc/opsi/package-updater.repos.d/: example.repo.template  experimental.repo  opsi-server.repo  testing.repo  uib-linux.repo  uib-local_image.repo  uib-mac.repo  uib-macos.repo  uib-windows.repo
opsi-utils_data/examples/: example.py  simple-example.py
opsi-utils_data/opsi-python-examples/: example.py  simple-example.py
opsiutils/: __init__.py  __main__.py  opsi-admin  opsiadmin.py  opsibackup.py  opsiconvert.py  opsimakepackage.py  opsinewprod.py  opsioutdatedtosetup.py  opsipackagemanager.py  opsipackageupdater.py  opsipython.py  opsisetup.py  opsiwakeupclients.py
opsiutils/update_packages/: Config.py  Exceptions.py  Notifier.py  Repository.py  Updater.py  Util.py
rpm/: build_rpm.sh  create_source.sh  opsi-utils.spec
tests/: test_opsi_makepackage.py  test_opsi_package_updater.py  test_opsiutils.py  utils.py
tests/data/: control  control.toml
tests/data/package-repo/: localboot_new_1.0-1.opsi  localboot_new_2.0-1.opsi  localboot_new_42.0-1337.opsi
tests/data/package-repo/subdir/: test-netboot_1.0-2.opsi
