[tool.poetry]
name = "opsi-utils"
version = "4.2.0.182"
description = "Utilities for working with opsi"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = ["uib GmbH <info@uib.de>"]
authors = ["uib GmbH <info@uib.de>"]
packages = [
    { include = "opsiutils" }
]
include = [
    "opsi-utils_data/**/*"
]

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
#python-opsi = {path = "python-opsi"}
python-opsi = "^4.2.0.292"
python-magic = "^0.4"
orjson = "3.6"
mysqlclient = "^2.0"
distro = {platform = "linux", version = "^1.5"}
paramiko = "^2.7"

[tool.poetry.dev-dependencies]
opsi-dev-tools = "^1.1.1"
pyinstaller = "^4.4"
pylint = "^2.7"

[tool.poetry.scripts]
opsi-admin = "opsiutils.opsiadmin:main"
opsi-backup = "opsiutils.opsibackup:main"
opsi-convert = "opsiutils.opsiconvert:main"
opsi-makepackage = "opsiutils.opsimakepackage:main"
opsi-newprod = "opsiutils.opsinewprod:main"
opsi-package-manager = "opsiutils.opsipackagemanager:main"
opsi-package-updater = "opsiutils.opsipackageupdater:main"
opsi-setup = "opsiutils.opsisetup:main"
opsi-python = "opsiutils.opsipython:main"
opsi-wakeup-clients = "opsiutils.opsiwakeupclients:main"

[tool.black]
line-length = 140
target-version = ['py310']
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
