[tool.poetry]
name = "opsi-utils"
version = "4.3.0.36"
description = "Utilities for working with opsi"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = ["uib GmbH <info@uib.de>"]
authors = ["uib GmbH <info@uib.de>"]
packages = [
    { include = "opsiutils" }
]
include = [
    "opsi-utils_data/**/*"
]

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
#python-opsi = {path = "python-opsi"}
python-opsi = ">=4.3.0.0,<4.4"
python-opsi-common = ">=4.3.0.48,<4.4"
#python-opsi-common = {path = "../python-opsi-common"}
python-magic = "^0.4"
# Lock to 2.1.1 (build problems with 2.2.0)
mysqlclient = ">=2.0,<2.2"
distro = {platform = "linux", version = "^1.5"}
paramiko = "^3.2"
pyzsync = "^0.9"
configupdater = "^3.1.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.3"
pylint = "^2.7"

[tool.poetry.scripts]
opsi-admin = "opsiutils.opsiadmin:main"
opsi-backup = "opsiutils.opsibackup:main"
opsi-convert = "opsiutils.opsiconvert:main"
opsi-makepackage = "opsiutils.opsimakepackage:main"
opsi-newprod = "opsiutils.opsinewprod:main"
opsi-package-manager = "opsiutils.opsipackagemanager:main"
opsi-package-updater = "opsiutils.opsipackageupdater:main"
opsi-setup = "opsiutils.opsisetup:main"
opsi-python = "opsiutils.opsipython:main"
opsi-wakeup-clients = "opsiutils.opsiwakeupclients:main"
opsi-outdated-to-setup = "opsiutils.opsioutdatedtosetup:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 140
target-version = ['py310']
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
